<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >
        
	    
	    <RadioButton
	        android:id="@+id/rbYesOption"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/yes" />
	    
	    <RadioButton
	        android:id="@+id/rbNoOption"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        
	        android:text="@string/no" />
	    
    </RadioGroup>
    
    <TextView
        android:id="@+id/txtNewSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="25dp"
        android:textStyle="bold"
        android:text="@string/followUpNewSymptoms"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rbGroup"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:text="@string/next"/>
    
</RelativeLayout>